# CP-GPT

./: .gitattributes  .gitignore  .vercelignore  ARCHITECTURE.md  Cp-gpt_overview.txt  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  RENDER_SETUP_QUICK.md  Services.md  cp_gpt_improvements.md  docker-compose.yml  implementation_plan_v2  render.yaml  vercel.json
.github/workflows/: frontend.yml
Ui/: README.md  index.html
Ui/src/app/: routes.tsx
Ui/src/styles/: app-theme.css  theme.css
backend/: .env.example  Dockerfile  alembic.ini  neon_schema.sql  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_composite_indexes.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  coaching.py  paths.py  problems.py  progress.py  users.py
backend/app/core/: exceptions.py  security.py  users.py
backend/app/models/: __init__.py  conversation.py  path.py  problem.py  progress.py  user.py
backend/app/schemas/: __init__.py  coaching.py  conversation.py  path.py  problem.py  progress.py  user.py
backend/app/services/: agent.py  coaching.py  codeforces.py  path_generator.py  recommender.py  user_analyzer.py
backend/app/tasks/: cf_sync.py  scheduler.py
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  (+3 more)
(+33 files in other folders)
